Fixed logo padding on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -71,7 +71,7 @@ img {
 }
 
 .logo-header {
-  padding: 24px 0;
+  padding: 16px 0;
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
@@ -935,6 +935,10 @@ img {
 
   .container {
     width: 768px;
+  }
+
+  .logo-header {
+    padding: 24px 0;
   }
 
   .list-item {
